# ekiden-rust-sdk

./: .gitignore  Cargo.toml  README.md
examples/: aptos.rs  basic_client.rs  portfolio_monitor.rs  websocket_streams.rs
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  types.rs  utils.rs  ws.rs
src/aptos/: vault.rs
tests/: unit_tests.rs
